--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
       <h1 class="titulo">Portafolio</h1>
       <h3 class="trabajos-final">Trabajos Finales en Apx</h3>
    </header>
-   <section class="contenidos">
-
-   </section>
+   <section class="contenidos"></section>
    <template id="template">
       <article class="articulos">
          <img src="https://picsum.photos/200/300" alt="paisaje" class="article-img">
