--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3 class="article-title">Titulo Prueba</h3>
             <p class="article-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut optio sunt incidunt iusto perferendis unde ea debitis earum, minima molestias perspiciatis amet eligendi, explicabo saepe quibusdam repudiandae. Illum, enim consequatur.</p>
             <div class="mas-informacion">
-               <a href="#">Ver más</a>
+               <a href="#" class="enlace" target="__blank">Ver más</a>
             </div>
          </div>
       </article>
